welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: value getColorSol
	if (getColorSol()==Color.green) {
            ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
		avance()
                      ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
		avance()
                      ^